atlan/broken/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-everything-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []
